RESOLVED FIXED52649
Assertion when loading two URLs in quick succession
https://bugs.webkit.org/show_bug.cgi?id=52649
Summary Assertion when loading two URLs in quick succession
Anders Carlsson
Reported 2011-01-18 12:26:32 PST
Assertion when loading two URLs in quick succession
Attachments
Patch (2.09 KB, patch)
2011-01-18 12:28 PST, Anders Carlsson
darin: review+
Anders Carlsson
Comment 1 2011-01-18 12:28:33 PST
Anders Carlsson
Comment 2 2011-01-18 12:34:45 PST
Note You need to log in before you can comment on or make changes to this bug.